--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-    <head>
-        <title>Welcome Page</title>
-    </head>
-    <body>
-        <h1>Welcome!</h1>
+<head>
+    <title>Welcome Page</title>
+</head>
+<body>
+<h1>Welcome!</h1>
 
-        <p><a href="all">Author & Book List</a></p>
-        <p><a href="authors">Author List</a></p>
-        <p><a href="books">Book List</a></p>
-
-        <p></p>
-        <p><a href="clear">Clear the Author and Book List</a></p>
-    </body>
+<p><a href="login">Authorization page</a></p>
+</body>
 </html>
